--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1375,6 +1375,7 @@ body {
 .cid-qZUhFd2Jxe {
   padding-top: 90px;
   padding-bottom: 90px;
+  background-image: url("../../../assets/images/sam-portrait-2000x419.jpg");
 }
 @media (min-width: 992px) {
   .cid-qZUhFd2Jxe .mbr-figure {
