--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1397,6 +1397,19 @@ body {
     text-align: center;
   }
 }
+.cid-r05IjpTeEp {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background: #000000;
+}
+.cid-r05IjpTeEp .video-block {
+  margin: auto;
+}
+@media (max-width: 768px) {
+  .cid-r05IjpTeEp .video-block {
+    width: 100% !important;
+  }
+}
 .cid-qZUD4Taj3Q {
   padding-top: 90px;
   padding-bottom: 90px;
