--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -92,12 +92,15 @@ body {
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  padding: 1rem 3rem;
-  border-radius: 3px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   word-break: break-word;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+  display: -webkit-inline-flex;
+  padding: 1rem 3rem;
+  border-radius: 3px;
 }
 .btn-sm {
   font-weight: 500;
@@ -608,6 +611,7 @@ a:hover {
   left: 30%;
   bottom: 30%;
   transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
 }
 /* Others*/
 .note-check a[data-value=Rubik] {
@@ -648,6 +652,7 @@ a:hover {
   position: absolute;
   transform: rotate(45deg);
   width: 14px;
+  -webkit-transform: rotate(45deg);
 }
 .form-control {
   background-color: #f5f5f5;
@@ -678,6 +683,7 @@ a:hover {
   right: 0;
   top: 0;
   z-index: 0;
+  pointer-events: none;
 }
 blockquote {
   font-style: italic;
@@ -709,6 +715,7 @@ pre {
 }
 .mbr-section__comments .row {
   justify-content: center;
+  -webkit-justify-content: center;
 }
 /* Forms */
 .mbr-form .btn {
@@ -1160,10 +1167,7 @@ pre {
     align-items: center;
   }
   .navbar-toggleable-sm .navbar-collapse {
-    display: -webkit-box !important;
-    display: -webkit-flex !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
+    display: none;
     width: 100%;
   }
   .navbar-toggleable-sm .navbar-toggler {
@@ -1351,6 +1355,7 @@ pre {
 }
 .menu .navbar.collapsed:not(.beta-menu) {
   flex-direction: column;
+  -webkit-flex-direction: column;
 }
 .carousel-item.active,
 .carousel-item-next,
@@ -1372,10 +1377,26 @@ body {
 .dropup .dropdown-toggle::after {
   display: none;
 }
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .card-wrapper {
+    flex: auto!important;
+  }
+}
+.jq-selectbox li:hover,
+.jq-selectbox li.selected {
+  background-color: #149dcc;
+  color: #ffffff;
+}
+.jq-selectbox .jq-selectbox__trigger-arrow {
+  border-top-color: contrast(currentColor, #000000, #ffffff, 30%);
+}
+.jq-selectbox:hover .jq-selectbox__trigger-arrow {
+  border-top-color: #149dcc;
+}
 .cid-qZUhFd2Jxe {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/stockholm-archipelago-2000x2000.jpg");
+  background-color: #000000;
 }
 .cid-qZUhFd2Jxe .media-container-row {
   flex-direction: row-reverse;
@@ -1397,8 +1418,60 @@ body {
     text-align: center;
   }
 }
+.cid-rnPXEClk1R {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #000000;
+}
+.cid-rnPZ5ZaX5L {
+  background: #000000;
+  padding-top: 15px;
+  padding-bottom: 0px;
+}
+.cid-rnPZ5ZaX5L .video-block {
+  margin: auto;
+}
+@media (max-width: 768px) {
+  .cid-rnPZ5ZaX5L .video-block {
+    width: 100% !important;
+  }
+}
+.cid-rnPVrVSdVn {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-rnPXlVnIZA {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-rnPVqVMqsr {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #000000;
+}
+.cid-rnPVqVMqsr .line {
+  background-color: #073b4c;
+  color: #073b4c;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-rnPVqVMqsr .section-text {
+  padding: 2rem 0;
+  color: #ffffff;
+}
+.cid-rnPVqVMqsr .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rnPVqVMqsr .inner-container {
+    width: 100% !important;
+  }
+}
 .cid-r05IjpTeEp {
-  padding-top: 0px;
+  padding-top: 15px;
   padding-bottom: 0px;
   background: #000000;
 }
@@ -1409,6 +1482,32 @@ body {
   .cid-r05IjpTeEp .video-block {
     width: 100% !important;
   }
+}
+.cid-qZZVAetgcZ {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #000000;
+}
+.cid-qZZVAetgcZ h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-qZZVAetgcZ p {
+  color: #767676;
+  text-align: left;
+}
+.cid-qZZVAetgcZ .card-box {
+  padding-top: 2rem;
+}
+.cid-qZZVAetgcZ .card-wrapper {
+  height: 100%;
+}
+.cid-qZZVAetgcZ .card-title {
+  color: #c1c1c1;
+}
+.cid-qZZVAetgcZ P {
+  text-align: right;
 }
 .cid-qZUD4Taj3Q {
   padding-top: 90px;
@@ -1442,32 +1541,6 @@ body {
 }
 .cid-qZUD4Taj3Q LABEL {
   color: #ffffff;
-}
-.cid-qZZVAetgcZ {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #000000;
-}
-.cid-qZZVAetgcZ h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-}
-.cid-qZZVAetgcZ p {
-  color: #767676;
-  text-align: left;
-}
-.cid-qZZVAetgcZ .card-box {
-  padding-top: 2rem;
-}
-.cid-qZZVAetgcZ .card-wrapper {
-  height: 100%;
-}
-.cid-qZZVAetgcZ .card-title {
-  color: #c1c1c1;
-}
-.cid-qZZVAetgcZ P {
-  text-align: right;
 }
 .cid-qTkAaeaxX5 {
   padding-top: 60px;
@@ -1535,4 +1608,9 @@ body {
     justify-content: center;
     -webkit-justify-content: center;
   }
+}
+.cid-rnPPecQZ02 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #000000;
 }
