--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -714,29 +714,6 @@ section.lazy-placeholder:after {
   padding-bottom: 60px;
   background-color: #000000;
 }
-.cid-rnPZ5ZaX5L {
-  background: #000000;
-  padding-top: 15px;
-  padding-bottom: 0px;
-}
-.cid-rnPZ5ZaX5L .video-block {
-  margin: auto;
-}
-@media (max-width: 768px) {
-  .cid-rnPZ5ZaX5L .video-block {
-    width: 100% !important;
-  }
-}
-.cid-rnPVrVSdVn {
-  padding-top: 15px;
-  padding-bottom: 0px;
-  background-color: #000000;
-}
-.cid-rnPXlVnIZA {
-  padding-top: 15px;
-  padding-bottom: 0px;
-  background-color: #000000;
-}
 .cid-rnPVqVMqsr {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -761,6 +738,16 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
+.cid-rnPVrVSdVn {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-rnPXlVnIZA {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
 .cid-r05IjpTeEp {
   padding-top: 15px;
   padding-bottom: 0px;
@@ -773,32 +760,6 @@ section.lazy-placeholder:after {
   .cid-r05IjpTeEp .video-block {
     width: 100% !important;
   }
-}
-.cid-qZZVAetgcZ {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #000000;
-}
-.cid-qZZVAetgcZ h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-}
-.cid-qZZVAetgcZ p {
-  color: #767676;
-  text-align: left;
-}
-.cid-qZZVAetgcZ .card-box {
-  padding-top: 2rem;
-}
-.cid-qZZVAetgcZ .card-wrapper {
-  height: 100%;
-}
-.cid-qZZVAetgcZ .card-title {
-  color: #c1c1c1;
-}
-.cid-qZZVAetgcZ P {
-  text-align: right;
 }
 .cid-qZUD4Taj3Q {
   padding-top: 90px;
@@ -832,6 +793,45 @@ section.lazy-placeholder:after {
 }
 .cid-qZUD4Taj3Q LABEL {
   color: #ffffff;
+}
+.cid-qZZVAetgcZ {
+  padding-top: 105px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/aboutsamimage-480x270.png");
+}
+.cid-qZZVAetgcZ h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-qZZVAetgcZ p {
+  color: #767676;
+  text-align: left;
+}
+.cid-qZZVAetgcZ .card-box {
+  padding-top: 2rem;
+}
+.cid-qZZVAetgcZ .card-wrapper {
+  height: 100%;
+}
+.cid-qZZVAetgcZ .card-title {
+  color: #c1c1c1;
+}
+.cid-qZZVAetgcZ P {
+  text-align: right;
+}
+.cid-rnPZ5ZaX5L {
+  background: #000000;
+  padding-top: 15px;
+  padding-bottom: 0px;
+}
+.cid-rnPZ5ZaX5L .video-block {
+  margin: auto;
+}
+@media (max-width: 768px) {
+  .cid-rnPZ5ZaX5L .video-block {
+    width: 100% !important;
+  }
 }
 .cid-qTkAaeaxX5 {
   padding-top: 60px;
