create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -709,6 +709,11 @@ section.lazy-placeholder:after {
     text-align: center;
   }
 }
+.cid-sKJoOVYkn9 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-image: url("../../../assets/images/music-texture-2000x1252.png");
+}
 .cid-rnPXEClk1R {
   padding-top: 60px;
   padding-bottom: 60px;
