--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -712,6 +712,7 @@ section.lazy-placeholder:after {
 .cid-sSi9lRbD23 {
   padding-top: 90px;
   padding-bottom: 90px;
+  background-image: url("../../../assets/images/music-texture-2000x1252.png");
 }
 .cid-sSi9lRbD23 .media-container-row {
   flex-direction: row-reverse;
@@ -734,10 +735,9 @@ section.lazy-placeholder:after {
     text-align: center;
   }
 }
-.cid-sKJoOVYkn9 {
-  padding-top: 15px;
-  padding-bottom: 120px;
-  background-image: url("../../../assets/images/music-texture-2000x1252.png");
+.cid-sSi9lRbD23 .mbr-text,
+.cid-sSi9lRbD23 .mbr-section-btn {
+  text-align: left;
 }
 .cid-rnPXEClk1R {
   padding-top: 60px;
