create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -829,7 +829,7 @@ section.lazy-placeholder:after {
 .cid-qZZVAetgcZ {
   padding-top: 105px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/aboutsamimage-1-480x270.png");
+  background-color: #000000;
 }
 .cid-qZZVAetgcZ h4 {
   font-weight: 500;
